--- a/imagerecognition.vuforia/src/main/res/values/strings.xml
+++ b/imagerecognition.vuforia/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="ir_app_name">Vuforia Implementation</string>
+    <string name="ir_app_name">Vuforia 7 Implementation</string>
     <string name="ir_loading_indicator_message">Loading image recognition module ...</string>
 
     <string name="ir_permission_settings">Settings</string>
